EKS-Cluster-ingress/Sample-App/echoserver.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 2
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: demo-echo
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=eks-demo-ingress
    #nginx.ingress.kubernetes.io/whitelist-source-range: "86.154.175.5/32"
    # cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  ingressClassName: nginx-external
  tls: []
    # - hosts:
    #     - echo.vettom.github.io
    #   # secretName: echoapp-cert
  rules:
    - host: echo.vettom.github.io
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 80
